[gd_scene load_steps=6 format=3 uid="uid://bbcqfi825i5x1"]

[ext_resource type="StyleBox" uid="uid://dyhjt06puyome" path="res://Styles/ButtonPressedGreen/button_pressed_green.tres" id="1_okld1"]
[ext_resource type="Script" path="res://Scenes/AuthSubwindow/auth_sub.gd" id="1_q6y6x"]

[sub_resource type="Animation" id="Animation_m4w83"]
resource_name = "show_result"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 1, 0, 1), Color(0, 1, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"close"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2laqt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3u18"]
_data = {
"RESET": SubResource("Animation_2laqt"),
"show_result": SubResource("Animation_m4w83")
}

[node name="AuthSub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6y6x")

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_top = 35.0
offset_right = 164.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter your password here"
alignment = 1
max_length = 25
secret = true
expand_to_text_length = true

[node name="ChangeVisibilityButton" type="Button" parent="Password"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -13.0
offset_right = 34.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = ExtResource("1_okld1")
toggle_mode = true
text = "üëÅÔ∏è "
text_overrun_behavior = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.5
offset_top = 113.0
offset_right = 35.5
offset_bottom = 144.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Confirm"

[node name="Label" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 81.0
offset_right = 32.5
offset_bottom = 107.0
grow_horizontal = 2
text = "Success!"

[node name="Label2" type="Label" parent="."]
self_modulate = Color(0, 1, 0, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 81.0
offset_right = 32.5
offset_bottom = 107.0
grow_horizontal = 2
text = "Invalid password!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3u18")
}

[connection signal="text_changed" from="Password" to="." method="_on_password_text_changed"]
[connection signal="text_submitted" from="Password" to="." method="_on_password_text_submitted"]
[connection signal="focus_exited" from="Password/ChangeVisibilityButton" to="." method="_on_change_visibility_button_focus_exited"]
[connection signal="pressed" from="Password/ChangeVisibilityButton" to="." method="_on_change_visibility_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
